name:                example
version:             0.0.0.1
synopsis:            Examples
description:         Examples
license:             BSD3
build-type:          Simple
cabal-version:       >=1.24

library
  exposed-modules:     MainW
  hs-source-dirs:      lib
  default-language:    Haskell2010
  build-depends:        base
                      , containers
                      , ghcjs-dom
                      , mtl
                      , reflex
                      , reflex-dom
                      , reflex-dom-core
                      , text
                      , jsaddle
                      , jsaddle-warp

executable example
  main-is:           Main.hs
  hs-source-dirs:    app
  default-language:  Haskell2010
  build-depends:       base
                     , example
                     , reflex-dom
                     , reflex-dom-core
  ghc-options: -Wall -Wincomplete-uni-patterns 
               -O2 -threaded -rtsopts -with-rtsopts=-N
               -Wincomplete-record-updates -Wmissing-import-lists 


